--- a/README
+++ b/README
@@ -1,1 +1,3 @@
 This is part of the code for the NLRA Ruby on Rails site. Sensitive data, images, logs, and various config files necessary for the proper execution of the app have been removed, so it won't work if you try to load it up as-is.
+
+The app is entirely in Rails 3, and uses the new Assets pipeline introduced in Rails 3.1.
